--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
     <Button
         android:id="@+id/startBtn"
         android:text="Start"
-        android:layout_width="wrap_content"
+        android:backgroundTint="@color/black"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"/>
 </LinearLayout>
 
